@@ -1,9 +1,9 @@
 package utils;
 
 import org.springframework.web.multipart.MultipartFile;
-import sun.misc.BASE64Decoder;
 
 import java.io.*;
+import java.util.Base64;
 
 /**
  * @author fuhouyin
@@ -64,23 +64,18 @@ public class Base64ToMultipartFile implements MultipartFile {
      * base转为MultipartFile base64需要带着头
      */
     public static MultipartFile base64ToMultipart(String base64) {
-        try {
-            String[] baseStrs = base64.split(",");
+        String[] baseStrs = base64.split(",");
 
-            BASE64Decoder decoder = new BASE64Decoder();
-            byte[] b = new byte[0];
-            b = decoder.decodeBuffer(baseStrs[1]);
+        Base64.Decoder decoder = Base64.getDecoder();
+        byte[] b = new byte[0];
+        b = decoder.decode(baseStrs[1]);
 
-            for (int i = 0; i < b.length; ++i) {
-                if (b[i] < 0) {
-                    b[i] += 256;
-                }
+        for (int i = 0; i < b.length; ++i) {
+            if (b[i] < 0) {
+                b[i] += 256;
             }
-            return new Base64ToMultipartFile(b, baseStrs[0]);
-        } catch (IOException e) {
-            e.printStackTrace();
-            return null;
         }
+        return new Base64ToMultipartFile(b, baseStrs[0]);
     }
 
 }
